2008-10-07  Sanel <karijes@users.sourceforge.net>

	* src/DateTime.cpp: remove assertions; besides they are unneeded,
	day_name() would assert if day was larger than 7 (bad, I know)

2008-10-06  Sanel <karijes@users.sourceforge.net>

	* edelib/econfig.h: seems that class visibility is working at gcc >= 4.0

2008-10-05  Sanel <karijes@users.sourceforge.net>

	* edelib/List.h: de-templatized ListNode; this yields a smaller binary
	files that uses list

2008-10-04  Sanel <karijes@users.sourceforge.net>

	* edelib/econfig.h: E_EXPORT, E_NO_EXPORT and EDELIB_NO_API added
	* edelib/econfig.h: EDELIB_API now on gcc is E_EXPORT
	* edelib/EdbusData.h:
	* edelib/EdbusObjectPath.h:
	* edelib/EdbusDict.h:
	* edelib/EdbusList.h:
	* edelib/EdbusConnection.h:
	* edelib/EdbusMessage.h:
	* edelib/Regex.h:
	* edelib/DesktopFile.h:
	* edelib/Config.h:
	* edelib/String.h:
	* edelib/TiXml.h:
	* edelib/FontChooser.h:
	* edelib/DirWatch.h:
	* edelib/SevenSeg.h:
	* edelib/TableBase.h:
	* edelib/XSettingsClient.h:
	* edelib/XSettingsManager.h:
	* edelib/XSettingsCommon.h:
	* edelib/Sipc.h:
	* edelib/MessageBox.h:
	let public classes and functions use EDELIB_API

2008-10-03  Sanel <karijes@users.sourceforge.net>

	* edelib/Util.h:
	* src/Util.cpp: removed build_dirname() and reimplemented build_filename()
	to not use tokenizer
	* test/util.cpp: tests update

2008-10-02  Sanel <karijes@users.sourceforge.net>

	* src/IconChooser.cpp: same issue as with ExpandableGroup.cpp was

2008-10-01  Sanel <karijes@users.sourceforge.net>

	* src/ExpanadableGroup.cpp: do not reorder childs if group is not shown
	* src/IconTheme.cpp:
	* src/XSettingsClient.cpp: s/EASSERT/E_ASSERT, s/EDEBUG/E_DEBUG,
	s/EWARNING/E_WARNING
	* src/Window.cpp: small code reordering
	* TODO: entry
	* edelib/Util.h:
	* src/Util.cpp: build_filename() and build_dirname() should not contain
	separator parameter
	* test/util.cpp: updated tests

2008-09-26  Sanel <karijes@users.sourceforge.net>
